# story-gen

./: Cargo.toml  README.md
assets/story/: family_guy.story.ron  rick_and_morty.story.ron
crates/chatgpt/: Cargo.toml
crates/chatgpt/src/: lib.rs
crates/clickable_button/: Cargo.toml
crates/clickable_button/src/: components.rs  lib.rs  systems.rs
crates/fakeyou/: Cargo.toml
crates/fakeyou/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/story_gen_parser/: Cargo.toml
crates/story_gen_parser/src/: error.rs  lib.rs  parser.rs  string.rs
crates/story_gen_pipeline/: Cargo.toml
crates/story_gen_pipeline/src/: chatgpt.rs  error.rs  fakeyou.rs  lib.rs  parse.rs
src/: loader.rs  main.rs  resources.rs  styles.rs  systems.rs
src/assets/: loader.rs  mod.rs  resources.rs
src/debug/: mod.rs
src/input/: components.rs  events.rs  layout.rs  mod.rs  resources.rs  systems.rs
src/main_menu/: components.rs  layout.rs  mod.rs  systems.rs
src/options/: components.rs  layout.rs  mod.rs  systems.rs
src/pipeline/: events.rs  mod.rs  resources.rs  systems.rs
src/selection_menu/: components.rs  layout.rs  mod.rs  resources.rs  systems.rs
src/story/: components.rs  events.rs  layout.rs  mod.rs  resources.rs  systems.rs
src/story/chatgpt/: components.rs  error.rs  events.rs  mod.rs  resources.rs  systems.rs
src/story/fakeyou/: mod.rs  systems.rs
src/story/input/: components.rs  events.rs  layout.rs  mod.rs  systems.rs
src/story/interpreter/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/story/parser/: components.rs  error.rs  events.rs  mod.rs  systems.rs
