[package]
name = "story_gen"
version = "0.1.0"
authors = ["jercan_alex27@yahoo.com"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/story-gen"
description = "Simple project that generates a story based on a given input using AI APIs"
keywords = ["chatgpt", "elevenlabs", "api"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", features = ["wav"] }
bevy_egui = { git = "https://github.com/Vrixyz/bevy_egui.git", branch = "bevy-main" }
bevy_mod_sysfail = "3.0.0"
fakeyou-api = "0.1.2"
futures-lite = "1.13.0"
openai_api_rust = "0.1.8"

[workspace]
members = [
    "crates/*",
]
