[package]
name = "story_gen"
version = "0.1.0"
authors = ["jercan_alex27@yahoo.com"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/story-gen"
description = "Simple project that generates a story based on a given input using AI APIs"
keywords = ["chatgpt", "elevenlabs", "api"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickable_button = { path = "crates/clickable_button" }
story_gen_parser = { path = "crates/story_gen_parser" }
bevy = { version = "0.11.0", features = ["wav"] }
bevy-inspector-egui = "0.19.0"
bevy_mod_sysfail = "3.0.0"
egui-gizmo = "0.11.0"
egui_dock = "0.6.3"
fakeyou-api = "0.1.2"
futures-lite = "1.13.0"
openai_api_rust = "0.1.8"

[workspace]
members = [
    "crates/*",
]
