[package]
name = "story_gen"
version = "0.1.0"
authors = ["jercan_alex27@yahoo.com"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/story-gen"
description = "Simple project that generates a story based on a given input using AI APIs"
keywords = ["chatgpt", "fakeyou", "api"]
categories = ["games"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
fakeyou = { path = "crates/fakeyou" }
chatgpt = { path = "crates/chatgpt" }
clickable_button = { path = "crates/clickable_button" }
bevy = { version = "0.11.0", features = ["wav", "dynamic_linking"] }
bevy-inspector-egui = "0.19.0"
bevy_mod_sysfail = "3.0.0"
egui-gizmo = "0.11.0"
egui_dock = "0.6.3"
anyhow = "1.0.71"
serde = { version = "1.0.171", features = ["derive"] }
ron = "0.8.0"
serde_json = "1.0.103"
log = "0.4.19"

[workspace]
members = [
    "crates/*",
]
