[package]
name = "chatgpt"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/story-gen"
description = "This crate is a plugin that allows to interact with chatgpt via events."
keywords = ["story_gen"]

[dependencies]
bevy = { version = "0.11.0"}
openai_api_rust = "0.1.8"
futures-lite = "1.13.0"
