[package]
name = "fakeyou"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/story-gen"
description = "This crate is a plugin that generates tts for parsed actions."
keywords = ["story_gen"]

[dependencies]
anyhow = "1.0.72"
bevy = { version = "0.11.0"}
fakeyou-api = "0.2.1"
futures-lite = "1.13.0"
