[package]
name = "story_gen_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/story-gen"
description = "Parser for story_gen"
keywords = ["story_gen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.3", features = ["alloc"] }
