[package]
name = "story_gen_pipeline"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/story-gen"
description = "Pipeline for story generation"
keywords = ["story_gen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
story_gen_parser = { path = "../story_gen_parser" }
