[package]
name = "story_gen_pipeline"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/story-gen"
description = "Pipeline for story generation"
keywords = ["story_gen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fakeyou-api = "0.1.1"
openai_api_rust = "0.1.8"
story_gen_parser = { path = "../story_gen_parser" }
